--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "E. Daniel Valencia M.",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "http": "^0.0.1-security",
