--- a/package.json
+++ b/package.json
@@ -16,13 +16,17 @@
   "author": "E. Daniel Valencia M.",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "http": "^0.0.1-security",
+    "jsonwebtoken": "^9.0.1",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "mysql2": "^3.5.2",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.1"
   }
 }
