--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "E. Daniel Valencia M.",
   "license": "MIT",
   "dependencies": {
+    "@google-cloud/storage": "^7.0.1",
     "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
@@ -23,6 +24,7 @@
     "http": "^0.0.1-security",
     "jsonwebtoken": "^9.0.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.5.2",
     "nodemon": "^3.0.1",
